--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=PP_3_1_2
 # MySQL properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/lesson
+spring.datasource.url=jdbc:mysql://localhost:3306/spring
 spring.datasource.username=root
 spring.datasource.password=admin
 # Hibernate properties
